simplifiquei as chamadas aos dados de tweet e clima

--- a/GeraAlerta/html/html-organizacao/juntaTudo.html
+++ b/GeraAlerta/html/html-organizacao/juntaTudo.html
@@ -2,50 +2,26 @@
 
 <h1>Junta todos os dados para o alerta</h1>
 
-<p><strong>Hoje e&#39; dia 2014-07-10, SE 201428</strong></p>
+<p><strong>Hoje e&#39; dia 2014-08-22, SE 201434</strong></p>
 
 <h2>Dados </h2>
 
-<p>Casos de Dengue no MRJ</p>
-
-<pre><code class="r">dengueRJlimpo&lt;-paste(&quot;../&quot;,dengueRJlimpo,sep=&quot;&quot;)
-st&lt;-read.csv(dengueRJlimpo)
-</code></pre>
-
-<p>Casos de Dengue por APS</p>
-
-<pre><code class="r">dengueAPSlimpo&lt;-paste(&quot;../&quot;,dengueAPSlimpo,sep=&quot;&quot;)
-st.ap&lt;-read.csv(dengueAPSlimpo)
-</code></pre>
-
-<p>Tweets</p>
-
-<pre><code class="r">twlimpo&lt;-paste(&quot;../&quot;,twlimpo,sep=&quot;&quot;)
-tw&lt;-read.csv(twlimpo)
-</code></pre>
-
-<p>Temperatura </p>
-
-<pre><code class="r">climalimpo&lt;-paste(&quot;../&quot;,climalimpo,sep=&quot;&quot;)
-tempAP&lt;-read.csv(climalimpo)
-</code></pre>
-
 <h2>Tabela a nivel de municipio</h2>
 
-<pre><code>##         SE casos tweets  tmin temp.sd temp.min temp.max umid.mean umid.sd
-## 261 201420    63    105 21.49   3.244    17.00    27.14     70.18   15.61
-## 262 201421    57     41 23.47   2.420    20.00    27.57     73.25   11.44
-## 263 201422    38     80 21.17   2.059    18.43    25.00     77.14   10.58
-## 264 201423    40     54 22.19   3.019    18.71    28.00     72.01   14.86
-## 265 201424    19     49 23.37   2.706    19.43    27.86     72.66   12.77
-## 266 201425     4     55 22.92   2.800    19.00    27.00     74.42   13.35
-##     umid.min umid.max
-## 261    40.86    88.86
-## 262    53.29    87.57
-## 263    56.14    91.57
-## 264    45.43    89.71
-## 265    48.29    89.86
-## 266    51.00    94.00
+<pre><code>##         SE casos tweets temp.mean temp.sd temp.min temp.max umid.mean
+## 237 201428    25     61     21.36   1.825       19    24.83     77.77
+## 238 201429    26     56     20.88   2.250       18    25.00     68.58
+## 239 201430    24     55        NA      NA       NA       NA        NA
+## 240 201431    41     54        NA      NA       NA       NA        NA
+## 241 201432    29     68        NA      NA       NA       NA        NA
+## 242 201433     2     47        NA      NA       NA       NA        NA
+##     umid.sd umid.min umid.max
+## 237   9.377     58.5    89.17
+## 238  11.840     50.0    88.00
+## 239      NA       NA       NA
+## 240      NA       NA       NA
+## 241      NA       NA       NA
+## 242      NA       NA       NA
 </code></pre>
 
 <pre><code class="r">write.table(d,file=outputfile,row.names=FALSE,sep=&quot;,&quot;)
@@ -54,19 +30,19 @@ tempAP&lt;-read.csv(climalimpo)
 <h2>Dados por APS</h2>
 
 <pre><code>##          SE tweets   APS casos estacao temp.mean temp.sd temp.min temp.max
-## 2655 201420    105 AP5.3     8  galeao     21.49   3.244    17.00    27.14
-## 2656 201421     41 AP5.3    12  galeao     23.47   2.420    20.00    27.57
-## 2657 201422     80 AP5.3     8  galeao     21.17   2.059    18.43    25.00
-## 2658 201423     54 AP5.3     2  galeao     22.19   3.019    18.71    28.00
-## 2659 201424     49 AP5.3     0  galeao     23.37   2.706    19.43    27.86
-## 2660 201425     55 AP5.3     0  galeao     22.92   2.800    19.00    27.00
+## 2415 201428     61 AP5.3     0  galeao     21.36   1.825       19    24.83
+## 2416 201429     56 AP5.3     2  galeao     20.88   2.250       18    25.00
+## 2417 201430     55 AP5.3     3    &lt;NA&gt;        NA      NA       NA       NA
+## 2418 201431     54 AP5.3     7    &lt;NA&gt;        NA      NA       NA       NA
+## 2419 201432     68 AP5.3    10    &lt;NA&gt;        NA      NA       NA       NA
+## 2420 201433     47 AP5.3     0    &lt;NA&gt;        NA      NA       NA       NA
 ##      umid.mean umid.sd umid.min umid.max
-## 2655     70.18   15.61    40.86    88.86
-## 2656     73.25   11.44    53.29    87.57
-## 2657     77.14   10.58    56.14    91.57
-## 2658     72.01   14.86    45.43    89.71
-## 2659     72.66   12.77    48.29    89.86
-## 2660     74.42   13.35    51.00    94.00
+## 2415     77.77   9.377     58.5    89.17
+## 2416     68.58  11.840     50.0    88.00
+## 2417        NA      NA       NA       NA
+## 2418        NA      NA       NA       NA
+## 2419        NA      NA       NA       NA
+## 2420        NA      NA       NA       NA
 </code></pre>
 
 <pre><code class="r">write.table(Rt.ap,file=outputfile,row.names=FALSE,sep=&quot;,&quot;)
