--- a/GeraAlerta/html/html-organizacao/organizasinan2014.html
+++ b/GeraAlerta/html/html-organizacao/organizasinan2014.html
@@ -9,36 +9,36 @@
 <pre><code class="r">novosinan &lt;- paste(&quot;../&quot;,novosinan,sep=&quot;&quot;)
 </code></pre>
 
-<pre><code>##   DT_NOTIFIC SEM_NOT NU_ANO DT_SIN_PRI SEM_PRI    NM_BAIRRO
-## 1 2014-01-07  201402   2014 2014-01-04  201401 DEL CASTILHO
-## 2 2014-01-13  201403   2014 2014-01-12  201403        PENHA
-## 3 2014-01-15  201403   2014 2014-01-13  201403        BANGU
-## 4 2014-01-02  201401   2014 2013-12-26  201352   COPACABANA
-## 5 2014-01-03  201401   2014 2013-11-18  201347      ANDARAI
-## 6 2014-01-15  201403   2014 2014-01-12  201403        BANGU
+<pre><code>##   DT_NOTIFIC SEM_NOT NU_ANO DT_SIN_PRI SEM_PRI   NM_BAIRRO
+## 1 2014-01-15  201403   2014 2014-01-11  201402      TIJUCA
+## 2 2014-01-10  201402   2014 2014-01-07  201402       BANGU
+## 3 2014-01-09  201402   2014 2014-01-03  201401 SAO CONRADO
+## 4 2014-01-16  201403   2014 2014-01-03  201401    ANCHIETA
+## 5 2014-01-06  201402   2014 2014-01-04  201401       BANGU
+## 6 2014-01-13  201403   2014 2014-01-03  201401 LARANJEIRAS
 </code></pre>
 
 <p><strong>Criar variavel APS</strong></p>
 
 <p>Numero de registros sem AP (falha no mapeamento bairro -&gt; APS)</p>
 
-<pre><code>## [1] 147
+<pre><code>## [1] 47
 </code></pre>
 
 <p><strong>Serie temporal de casos no municipio todo em 2014</strong></p>
 
 <pre><code>##        SE casos
-## 51 201420    63
-## 52 201421    57
-## 53 201422    38
-## 54 201423    40
-## 55 201424    19
-## 56 201425     4
+## 28 201428    25
+## 29 201429    26
+## 30 201430    24
+## 31 201431    41
+## 32 201432    29
+## 33 201433     2
 </code></pre>
 
 <p><strong>Total de casos no ano</strong></p>
 
-<pre><code>## [1] 2185
+<pre><code>## [1] 1891
 </code></pre>
 
 <p><strong>Serie temporal de casos na cidade</strong>
@@ -52,12 +52,12 @@
 <pre><code class="r">outputfile1
 </code></pre>
 
-<pre><code>## [1] &quot;../dados_limpos/sinanAP_201425.csv&quot;
+<pre><code>## [1] &quot;../dados_limpos/sinanAP_201433.csv&quot;
 </code></pre>
 
 <pre><code class="r">outputfile2
 </code></pre>
 
-<pre><code>## [1] &quot;../dados_limpos/sinanRJ_201425.csv&quot;
+<pre><code>## [1] &quot;../dados_limpos/sinanRJ_201433.csv&quot;
 </code></pre>
 
